examples/errors/header/invalid_tempo.abc
X:1
T:Invalid Tempo
Q:fast
K:C
% H006: Invalid tempo value
CDEF|
